--- a/requirements2.txt
+++ b/requirements2.txt
@@ -4,7 +4,7 @@ cffi==1.15.1
 chardet==4.0.0
 crypto==1.4.1
 pycryptodome==3.15.0
-cryptography==3.3.2
+cryptography==2.8
 enum34==1.1.10
 idna==2.10
 ipaddress==1.0.23
@@ -20,3 +20,7 @@ tabulate==0.8.10
 zstandard==0.14.1
 mysql-connector==2.2.9
 pick==0.6.7
+prettytable==1.0.1
+mysql==0.0.3
+oyaml==1.0
+
