--- a/handler/checker/tasks/cluster/data_path_settings.yaml
+++ b/handler/checker/tasks/cluster/data_path_settings.yaml
@@ -12,6 +12,14 @@ task:
         set_value: log_dir_disk
         verify: '[ "#{data_dir_disk}" != "${log_dir_disk}" ]'
         err_msg: "#{remote_ip} data_dir and log_dir_disk are on the same disk."
+    - type: ssh
+      ssh: "df -Th #{remote_home_path}/store/clog | grep '/' | awk '{print $2}'"
+      result:
+        set_value:  file_system
+        verify: '[ "${file_system}" == "XFS" ] || [ "${file_system}" == "ext4" ]'
+        err_msg: "ip:#{remote_ip} ,file_system is not XFS or ext4."
+
+
 
 
 
