--- a/handler/checker/tasks/sysbench/sysbench_free_test_network_speed.yaml
+++ b/handler/checker/tasks/sysbench/sysbench_free_test_network_speed.yaml
@@ -7,10 +7,10 @@ task:
       result:
         set_value: network_name
     - type: ssh
-      ssh: "ethtool #{network_name} | grep Speed | grep -o '[0-9]*'"
+      ssh: "ethtool #{network_name} 2>/dev/null| grep Speed"
       result:
         set_value: network_speed
-        verify: '[ "$output" != *"Unknown"* ]'
+        verify: '[[ ! $network_speed == *"Unknown"* ]]'
         #report_type: warning
         err_msg: "network_speed is #{network_speed}, can not get real speed"
     - type: ssh
