--- a/check_package.yaml
+++ b/check_package.yaml
@@ -18,6 +18,8 @@ filter:
   - sysbench.sysbench_free_test_cpu_count
   - sysbench.sysbench_free_test_memory_limit
   - sysbench.sysbench_free_test_network_speed
+  - sysbench.sysbench_run_test_tenant_cpu_used
+  - sysbench.sysbench_run_test_tenant_memory_used
   - sysbench.sysbench_test_cluster_datafile_size
   - sysbench.sysbench_test_cluster_log_disk_size
   - sysbench.sysbench_test_cluster_parameters
