--- a/handler/checker/tasks/cluster/tenant_log_size.yaml
+++ b/handler/checker/tasks/cluster/tenant_log_size.yaml
@@ -3,11 +3,13 @@ task:
   - obversion: "[4.0.0.0,*]"
     steps:
     - type: sql
-      sql: 'SELECT COUNT(*)
-FROM oceanbase.DBA_OB_UNIT_CONFIGS
-WHERE LOG_DISK_SIZE < MEMORY_SIZE * 3;'
+      sql: 'SELECT GROUP_CONCAT(DISTINCT TENANT_NAME) FROM OCEANBASE.DBA_OB_TENANTS t1,OCEANBASE.DBA_OB_UNITS t2,OCEANBASE.DBA_OB_UNIT_CONFIGS t3,OCEANBASE.DBA_OB_RESOURCE_POOLS t4
+where t1.tenant_id = t4.tenant_id AND t4.resource_pool_id=t2.resource_pool_id AND t4.unit_config_id=t3.unit_config_id
+  and t2.svr_ip="#{remote_ip}"
+  and t3.LOG_DISK_SIZE< t3.MEMORY_SIZE * 3
+  and t1.tenant_id>1000
+ORDER BY t1.tenant_name;'
       result:
-        set_value: major_err_nu
-        verify_type: equal
-        verify: 0
-        err_msg: "There is a tenant's log present_ Size less than MEMORY_ Three times the size, please modify the tenant specifications in a timely manner"
+        set_value: tenant
+        verify: '[ -z "$tenant" ]'
+        err_msg: "There are tenant's log_size less than memory_size Three times , please modify the tenant specifications in a timely manner.tenant: #{tenant}"
