--- a/.github/workflows/build_rpm.yml
+++ b/.github/workflows/build_rpm.yml
@@ -33,4 +33,6 @@ jobs:
       - name: Build package
         run: |
           pwd
+          ls -lh
+          cat ./rpm/oceanbase-diagnostic-tool.spec
           rpmbuild -bb ./rpm/oceanbase-diagnostic-tool.spec
