--- a/.github/workflows/build_rpm.yml
+++ b/.github/workflows/build_rpm.yml
@@ -42,6 +42,10 @@ jobs:
         run: |
           fakeroot alien --scripts --to-deb /home/runner/rpmbuild/RPMS/x86_64/oceanbase-diagnostic-tool-*.rpm
 
+      - name: Find DEB package
+        run: |
+          find /home/runner/rpmbuild -name 'oceanbase-diagnostic-tool_*.deb'
+
       - name: 'Upload Artifacts'
         uses: actions/upload-artifact@v3
         with:
