--- a/.github/workflows/build_rpm.yml
+++ b/.github/workflows/build_rpm.yml
@@ -40,12 +40,12 @@ jobs:
 
       - name: Convert RPM to DEB
         run: |
-          mkdir -p /home/runner/deb
-          fakeroot alien --scripts --to-deb --target /home/runner/deb /home/runner/rpmbuild/RPMS/x86_64/oceanbase-diagnostic-tool-*.rpm
+          mkdir -p /home/runner/artifacts
+          fakeroot alien --scripts --to-deb --target /home/runner/artifacts --architecture amd64 /home/runner/rpmbuild/RPMS/x86_64/oceanbase-diagnostic-tool-*.rpm
 
       - name: Find DEB package
         run: |
-          find /home/runner/deb -name 'oceanbase-diagnostic-tool_*.deb'
+          find /home/runner/artifacts -name 'oceanbase-diagnostic-tool_*.deb'
 
       - name: 'Upload Artifacts'
         uses: actions/upload-artifact@v3
