--- a/.github/workflows/build_rpm.yml
+++ b/.github/workflows/build_rpm.yml
@@ -41,11 +41,7 @@ jobs:
       - name: Convert RPM to DEB
         run: |
           mkdir -p /home/runner/artifacts
-          fakeroot alien --scripts --to-deb --target /home/runner/artifacts --architecture amd64 /home/runner/rpmbuild/RPMS/x86_64/oceanbase-diagnostic-tool-*.rpm
-
-      - name: Find DEB package
-        run: |
-          find /home/runner/artifacts -name 'oceanbase-diagnostic-tool_*.deb'
+          fakeroot alien --scripts --to-deb /home/runner/rpmbuild/RPMS/x86_64/oceanbase-diagnostic-tool-*.rpm
 
       - name: 'Upload Artifacts'
         uses: actions/upload-artifact@v3
@@ -53,6 +49,6 @@ jobs:
           name: obdiag-packages
           path: |
             /home/runner/rpmbuild/RPMS/x86_64/oceanbase-diagnostic-tool-*.rpm
-            /home/runner/deb/oceanbase-diagnostic-tool_*.deb
+            /home/runner/work/oceanbase-diagnostic-tool/oceanbase-diagnostic-tool/oceanbase-diagnostic-tool_*.deb
           retention-days: 3
           debug: true
